Update calculator.js memory values and fix input display on firefox

--- a/css/calc-style.css
+++ b/css/calc-style.css
@@ -7,7 +7,7 @@
 
 body{
   font-family: 'Orbitron', sans-serif;
-  background-color: #f6f7d3;/*#e2e4b2;*/
+  background-color: rgb(247,247,247);/*#f6f7d3 #e2e4b2;*/
 }
 
 .calc{
@@ -34,16 +34,7 @@ body{
 	letter-spacing: 2px;
 }
 
-.display{
-	box-shadow: inset 0 0 6px 0px #000;
-	height: 40px;
-	background-color: #f7f4d7;
-	margin-right: 10px;
-	margin-left: 10px;
-	color: #000;
-	font-size: 22px;
-	text-align: right;
-}
+
 #Value{
 	float: right;
 	padding: 5px;
@@ -114,4 +105,16 @@ body{
 }
 .fa-free-code-camp{
 	color: green;
+}
+
+
+.display{
+	box-shadow: inset 0 0 6px 0px #000;
+	height: 40px;
+	background-color: #f7f4d7;
+	/*margin-right: 10px;
+	margin-left: 10px;*/
+	color: #000;
+	font-size: 20px;
+	text-align: right;
 }
